--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
         <h1>랜덤 고양이 사진 및 정보 제공기</h1>
         <button id="catButton">고양이 정보 가져오기</button>
         <div id="catInfo">
-            <img id="catImage" src="" alt="고양이 사진">
-            <p id="breedInfo"></p>
+            <img id="catImage" src="" alt="Random Cat Image">
+            <p id="breedInfo">Breed: </p>
+            <p id="description">Description: </p>
+            <p id="origin">Origin: </p>
+            <p id="lifeSpan">Life Span: </p>
         </div>
     </div>
     <script src="script.js"></script>
@@ -21,6 +24,5 @@
 
 <!-- 
 웹 애플리케이션 (HTML, JS, CSS)과 Python GUI 애플리케이션은 
-별개의 애플리케이션입니다. 
-필요에 따라 둘 중 하나를 선택하여 사용하면 됩니다.
+별개의 애플리케이션입니다. 필요에 따라 둘 중 하나를 선택하여 사용하면 됩니다.
 -->
